# emby-telegram-bot-v2

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: DEPLOYMENT_STEP_BY_STEP.md  MIGRATION.md  SECURITY.md
src/emby_telegram_bot/: __init__.py  config.py  emby_client.py  episode_aggregator.py  formatting.py  main.py  telegram_client.py  webhook.py  wsgi.py
tests/: test_config.py  test_formatting.py
