[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emby-telegram-bot-v2"
version = "0.1.0"
description = "Webhook service to publish Emby updates to Telegram"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.1.0",
  "gunicorn==23.0.0",
  "python-telegram-bot==22.0",
  "requests==2.32.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
